Update - App - Working on base app

--- a/Theapp/app/src/main/assets/index.html
+++ b/Theapp/app/src/main/assets/index.html
@@ -7,12 +7,15 @@
 </head>
 
 <body>
-<div class="menu-container">
-    <div class="button-container">
-        <button>Nodeslist</button><br>
-        <button>Network</button><br>
-        <button>Settings</button><br>
+    <div class="menu-container">
+
+        <H1> Main menu: </H1>
+
+        <div class="button-container">
+            <button class="button-one">Nodeslist</button><br>
+            <button class="button-one">Network</button><br>
+            <button class="button-one">Settings</button><br>
+        </div>
     </div>
-</div>
 </body>
 </html>
