update - app - edited the css and started on the bridge menu

--- a/Theapp/app/src/main/assets/index.html
+++ b/Theapp/app/src/main/assets/index.html
@@ -7,14 +7,16 @@
 </head>
 
 <body>
-    <div class="menu-container">
+    <div id="body-container">
+        <div class="menu-container">
 
-        <H1> Main menu: </H1>
+            <img src="img\logo.png"/ id="logo">
 
-        <div class="button-container">
-            <button class="button-one">Nodeslist</button><br>
-            <button class="button-one">Network</button><br>
-            <button class="button-one">Settings</button><br>
+            <div class="button-container">
+                <button class="button-one">Nodeslist</button><br>
+                <button class="button-one">Network</button><br>
+                <button class="button-one">Settings</button><br>
+            </div>
         </div>
     </div>
 </body>
