--- a/Theapp/app/src/main/assets/bridge/bridge.html
+++ b/Theapp/app/src/main/assets/bridge/bridge.html
@@ -3,6 +3,7 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="../style.css" type="text/css">
+        <script type="text/javascript" src="bridge.js"></script>
     </head>
 
     <body>
@@ -11,26 +12,13 @@
                 <div id="bridge-info-container">
                 <!-- Javascript code should be
                 added here to display bridge info -->
-                    <table>
-                        <tr>
-                            <td> Option </td>
-                            <td> Value </td>
-                        </tr>
-
-                        <tr>
-                            <td> ip </td>
-                            <td> 192.168.1.1 </td>
-                        </tr>
-
-                        <tr>
-                            <td> random data </td>
-                            <td> dit is wat random data </td>
-                        </tr>
-                    </table>
+                <script> generateTableBridge(); </script>
                 </div>
 
                 <div class="button-container">
-                    <button class="button-one"> dit is een button </button>
+                    <button class="button-one" onclick="Apply();"> Apply </button>
+                    <button class="button-one"> Discard </button>
+                    <button class="button-one"> Close </button>
                 </div>
             </div>
         </div>
