--- a/Theapp/app/src/main/assets/index.html
+++ b/Theapp/app/src/main/assets/index.html
@@ -4,18 +4,21 @@
 <head>
     <!-- Scripts go here-->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="index.js" type="text/javascript"> </script>
 </head>
 
 <body>
     <div id="body-container">
         <div class="menu-container">
 
-            <img src="img\logo.png"/ id="logo">
+            <img src="img\logo.png" id="logo">
 
             <div class="button-container">
                 <button class="button-one">Nodeslist</button><br>
                 <button class="button-one">Network</button><br>
-                <button class="button-one">Settings</button><br>
+                <button class="button-one" onclick="bridgeSettingsButton();">
+                Settings</button>
+                <br>
             </div>
         </div>
     </div>
