Update - app - Added the stylesheet for the snackbar and started development on the snackbar

--- a/Theapp/app/src/main/assets/bridge/bridge.html
+++ b/Theapp/app/src/main/assets/bridge/bridge.html
@@ -3,6 +3,7 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="../style.css" type="text/css">
+        <link rel="stylesheet" href="../snackbar.css" type="text/css">
         <script type="text/javascript" src="bridge.js"></script>
     </head>
 
@@ -18,6 +19,10 @@
                     <button class="button-one" onclick="discard();"> Discard </button>
                     <button class="button-one" onclick="goBackHome();"> Close </button>
                 </div>
+            </div>
+
+            <div id="snackbar">
+                I can go for a snack
             </div>
         </div>
     </body>
