Update - HTTP Requests - Started work on HTTP requests

--- a/Theapp/app/src/main/assets/index.html
+++ b/Theapp/app/src/main/assets/index.html
@@ -15,7 +15,7 @@
 
             <div class="button-container">
                 <button class="button-one">Nodeslist</button><br>
-                <button class="button-one">Network</button><br>
+                <button class="button-one" onclick="networkButton();">Network</button><br>
                 <button class="button-one" onclick="bridgeSettingsButton();">
                 Settings</button>
                 <br>
