--- a/Theapp/app/src/main/assets/index.html
+++ b/Theapp/app/src/main/assets/index.html
@@ -5,6 +5,10 @@
     <!-- Scripts go here-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="index.js" type="text/javascript"> </script>
+
+    <manifest>
+        <uses-permission android:name="android.permission.INTERNET" />
+    </manifest>
 </head>
 
 <body>
@@ -16,8 +20,8 @@
             <div class="button-container">
                 <button class="button-one">Nodeslist</button><br>
                 <button class="button-one">Network</button><br>
-                    <button class="button-one" onclick="bridgeSettingsButton();">
-                    Settings</button>
+                <button class="button-one" onclick="bridgeSettingsButton();">
+                Settings</button>
                 <br>
             </div>
         </div>
