--- a/TheaPP_Website/Website/nodeslist/nodeslist.html
+++ b/TheaPP_Website/Website/nodeslist/nodeslist.html
@@ -10,7 +10,7 @@
 <div id="body-container">
     <div class="menu-container">
         <div class="button-container">
-            <button class="button-one" onclick="goToGroup();"> Group Test </button>
+            <button class="button-one" onclick="goToGroup('una')"> Unassigned </button>
         </div>
 
         <div class="button-container">
