Update - TheaPP - Can now send commands to bridge

--- a/TheaPP_Website/Website/grouppage/grouppage.html
+++ b/TheaPP_Website/Website/grouppage/grouppage.html
@@ -10,14 +10,14 @@
 <body>
 <div id="body-container">
     <div class="menu-container">
-        <div class="button-container">
-            <button class="button-switch" onclick="debugNodes()">On</button>
-            <button class="button-switch">Off</button>
+        <div class="button-container button-container-01">
+            <button class="button-switch" onclick="groupOn();">On</button>
+            <button class="button-switch" onclick="groupOff();">Off</button>
         </div>
 
         <br>
 
-        <div id="nodes" class="button-container"></div>
+        <div id="nodes" class="button-container button-container-02"></div>
 
         <div class="button-container">
             <button class="button-back" onclick="goBack();"> Close </button>
