--- a/TheaPP_Website/Website/nodeslist/nodeslist.html
+++ b/TheaPP_Website/Website/nodeslist/nodeslist.html
@@ -10,7 +10,7 @@
 <body>
 <div id="body-container">
     <div class="menu-container">
-        <div id="groups" class="button-container"></div>
+        <div id="groups" class="button-container button-container-03"></div>
 
         <div class="button-container">
             <button class="button-back" onclick="goBackHome();"> Close </button>
