Update - TheaPP - Updated minor things

--- a/TheaPP_Android/app/src/main/assets/nodepage/nodepage.html
+++ b/TheaPP_Android/app/src/main/assets/nodepage/nodepage.html
@@ -16,6 +16,10 @@
             <br>
             <input id="groupID" type="number" class="input-group" min="0">
             <button class="button-one" onclick="setGroup();">Set group</button>
+            <br>
+            <br>
+            <input id="nodeID" type="number" class="input-group" min="0">
+            <button class="button-one" onclick="linkNodes();">Link Nodes</button>
         </div>
 
         <div class="button-container">
